Apply Java 21 language features to PetAnalyticsService
Co-authored-by: awin-copilot-agent <216695255+awin-copilot-agent@users.noreply.github.com>